--- a/public/css/main.css
+++ b/public/css/main.css
@@ -222,20 +222,18 @@ a:after {
 }
 
 .pin img {
-	width: 70%;
+	width: 100%;
 	border-bottom: 1px solid #ccc;
-	padding-bottom: 15px;
-	margin-bottom: 5px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
 }
 
 .pin p {
 	font: 12px/18px Arial, sans-serif;
 	color: #333;
   background-color:#333;
-	margin: auto;
   text-align: center;
-  width: auto;
-  height: 30px;
+  height: 40px;
 }
 
 @media (min-width: 960px) {
@@ -263,4 +261,11 @@ a:after {
   overflow-y:scroll;
   width:100%;
 text-align: center;
+}
+.receipe-panel .draggable-box{
+
+    height: 120px;
+    width: 160px;
+    border: 1px solid Black;
+    text-align: center;
 }
