Added deleted fetature

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -319,3 +319,10 @@ overflow-y: scroll;
     text-align: center;
     background-color:fff;
 }
+.fc-title { 
+   white-space: pre-wrap;      /* CSS3 */   
+   white-space: -moz-pre-wrap; /* Firefox */    
+   white-space: -pre-wrap;     /* Opera <7 */   
+   white-space: -o-pre-wrap;   /* Opera 7 */    
+   word-wrap: break-word;      /* IE */
+}
